# obs-studio-hello-world

./: .gitignore  CMakeLists.txt
hello-world/: CMakeLists.txt
